--- a/index.html
+++ b/index.html
@@ -116,28 +116,167 @@
 </div>
 
 <!--- Sección de dos columnas -->
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-md-12 col-lg=6">
+			<h2>test text...</h2>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<br>
+			<a href="#" class="btn btn-primary">Aprende mas</a>
+		</div>
+		<div class="col-lg-6">
+			<img src="img/desk.png" class="img-fluid">
+		</div>
+	</div>
+</div>
 
-
+<hr class="my-4">
 <!--- Fondo arreglado -->
-
+<figure>
+	<div class="fixed-wrap">
+		<div id="fixed">
+		</div>
+	</div>
+</figure>
 
 <!--- Sección de emojis -->
-
-  
+<button class="fun" data-toggle="collapse" data-target="#emoji">Click para diversion</button>
+<div id="emoji" class="collapse">
+	<div class="container-fluid padding">
+		<div class="row text-center">
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/panda.gif" class="gif">
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/poo.gif" class="gif">
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/unicorn.gif" class="gif">
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/chicken.gif" class="gif">
+			</div>
+		</div>
+	</div>
+</div>
 <!--- Conoce al equipo -->
-
+<div class="container-fluid padding">
+	<div class="row welcome text-center">
+		<div class="col-12">
+			<h1 class="display-4">Conoce al equipo</h1>
+		</div>
+		<hr>
+	</div>
+</div>
 
 <!--- Tarjetas -->
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-md-4">
+			<div class="card">
+				<img src="img/team1.png" class="card-img-top">
+				<div class="card-body">
+					<h4 class="card-title">John Doe</h4>
+					<p class="card-text">Test test test</p>
+					<a href="#" class="btn btn-outline-secondary">Ver perfil</a>
+				</div>
+			</div>
+		</div>
 
+		<div class="col-md-4">
+			<div class="card">
+				<img src="img/team2.png" class="card-img-top">
+				<div class="card-body">
+					<h4 class="card-title">Mary Jo</h4>
+					<p class="card-text">Test test test</p>
+					<a href="#" class="btn btn-outline-secondary">Ver perfil</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4">
+			<div class="card">
+				<img src="img/team3.png" class="card-img-top">
+				<div class="card-body">
+					<h4 class="card-title">Phil Ho</h4>
+					<p class="card-text">Test test test</p>
+					<a href="#" class="btn btn-outline-secondary">Ver perfil</a>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</div>
 
 <!--- Sección de dos columnas -->
-
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-md-12 col-lg=6">
+			<h2>Nuestra filosofia</h2>
+			<p>test</p>
+			<p>test</p>
+			<br>
+		</div>
+		<div class="col-lg-6">
+			<img src="img/bootstrap2.png" class="img-fluid">
+		</div>
+	</div>
+</div>
 
 <!--- Conexiones -->
-
+<div class="container-fluid padding">
+	<div class="row text-center padding">
+		<div class="col-12">
+			<h2>Conectar</h2>
+		</div>
+		<div class="col-12 social padding">
+			<a href="#"><i class="fab fa-facebook"></i></a>
+			<a href="#"><i class="fab fa-twitter"></i></a>
+			<a href="#"><i class="fab fa-google-plus-g"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+			<a href="#"><i class="fab fa-youtube"></i></a>
+		</div>
+	</div>
+</div>
 
 <!--- Pie de página -->
-
+<footer>
+	<div class="container-fluid padding">
+		<div class="row text-center">
+			<div class="col-md-4">
+				<img src="img/w3newbie.png">
+				<hr class="light">
+				<p>555-555-555</p>
+				<p>wasd@wasd.com</p>
+				<p>456 Hamil St.</p>
+				<p>CDMX, 35000</p>
+			</div>
+			<div class="col-md-4">
+				<hr class="light">
+				<h5>Nuestros horarios</h5>
+				<hr class="light">
+				<p>Lunes 9am-5pm</p>
+				<p>Sabados 10am-4pm</p>
+				<p>Domingos Cerrado</p>
+			</div>
+			<div class="col-md-4">
+				<hr class="light">
+				<h5>Nuestros horarios</h5>
+				<hr class="light">
+				<p>CDMX, 35000</p>
+				<p>CDMX, 35000</p>
+				<p>CDMX, 35000</p>
+				<p>CDMX, 35000</p>
+			</div>
+			<div class="col-12">
+				<hr class="light">
+				<h5>&copy; luisdavid.com</h5>
+			</div>
+		</div>
+	</div>
+</footer>
 
 
 
