--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <!--- Sección de dos columnas -->
 <div class="container-fluid padding">
 	<div class="row padding">
-		<div class="col-md-12 col-lg=6">
+		<div class="col-md-12 col-lg-6">
 			<h2>test text...</h2>
 			<p>test</p>
 			<p>test</p>
@@ -213,7 +213,7 @@
 <!--- Sección de dos columnas -->
 <div class="container-fluid padding">
 	<div class="row padding">
-		<div class="col-md-12 col-lg=6">
+		<div class="col-md-12 col-lg-6">
 			<h2>Nuestra filosofia</h2>
 			<p>test</p>
 			<p>test</p>
@@ -223,6 +223,7 @@
 			<img src="img/bootstrap2.png" class="img-fluid">
 		</div>
 	</div>
+	<hr class="my-4">
 </div>
 
 <!--- Conexiones -->
@@ -263,7 +264,7 @@
 			</div>
 			<div class="col-md-4">
 				<hr class="light">
-				<h5>Nuestros horarios</h5>
+				<h5>Areas de servicio</h5>
 				<hr class="light">
 				<p>CDMX, 35000</p>
 				<p>CDMX, 35000</p>
@@ -271,7 +272,7 @@
 				<p>CDMX, 35000</p>
 			</div>
 			<div class="col-12">
-				<hr class="light">
+				<hr class="light-100">
 				<h5>&copy; luisdavid.com</h5>
 			</div>
 		</div>
