--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 					<a href="#" class="nav-link">Inicio</a>
 				</li>
 				<li class="nav-item ">
-					<a href="#" class="nav-link">Nosotros</a>
+					<a href="acercade.html" class="nav-link">Nosotros</a>
 				</li>
 				<li class="nav-item ">
-					<a href="#" class="nav-link">Productos</a>
+					<a href="productos.html" class="nav-link">Productos</a>
 				</li>
 				<li class="nav-item ">
 					<a href="#" class="nav-link">Servicios para negocios</a>
 				</li>
 				<li class="nav-item ">
-					<a href="#" class="nav-link">Contacto</a>
+					<a href="contacto.html" class="nav-link">Contacto</a>
 				</li>
 			</ul>
 		</div>
@@ -61,9 +61,17 @@
 		</div>
 		<div class="carousel-item">
 			<img src="img/background2.png">
+			<div class="carousel-caption">
+				<h1 class="display-2">Espacios agradables</h1>
+				<h3>Ofrecemos espacios tranquilos y conexión a internet gratuito</h3>
+			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="img/background3.png">
+			<div class="carousel-caption">
+				<h1 class="display-2">Pensado para tí</h1>
+				<h3>Sala de juntas, jardín y una hermosa vista</h3>
+			</div>
 		</div>
 	</div>
 </div>
