Páginas básicas con información terminados
Páginas básicas con información terminados. Falta corregir algunos detalles estéticos y agregar algo de Javascript.

--- a/negocios.html
+++ b/negocios.html
@@ -42,28 +42,51 @@
 	</div>
 </nav>
 
-<div class="container-fluid padding">
-	<section class="page-section about-heading">
-		<div class="container">
-			<img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
-			<div class="about-heading-content">
-				<div class="row">
-				<div class="col-xl-9 col-lg-10 mx-auto">
-					<div class="bg-faded rounded p-5">
-					<h2 class="section-heading mb-4">
-						<span class="section-heading-upper">Café poderoso, Raices poderosas</span>
-						<br>
-						<span class="section-heading-lower">Acerca de nuestro café</span>
-					</h2>
-					<p>Fundado en el 2010 por los hermanos Sáenz, nuestro establecimiento ha sido reconocido por servir el más delicioso café traído de tierras Veracruzanas, además de otras tierras nacionales como Chiapas y Oaxaca. Nuestra meta es viajar poe el mundo para encontrar el mejor café, y traerlo de vuelta a México a través de nuestros establecimientos.</p>
-					<p class="mb-0">Garantizamos que nuestro sabor te gustará, <em>Veracruz</em> se caracteriza por tener una rica cultura y platillos deliciosos, y el café es uno de los productos que lo representa, las tierras del sur de México poseen propiedades positivas para el crecimiento de granos como el café, dando el sabor que tiene y que ayuda que productores como Don Chuy salgan adelante y mantengan a flote sus vidas.</p>
-					</div>
-				</div>
-				</div>
-			</div>
+<!--- Jumbotron -->
+<div class="container-fluid">
+	<div class="row jumbotron">
+		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+			<p class="lead">Somos más que un simple café, te ofrecemos un lugar tranquilo para trabajar, platicar, o simplemente descanzar. Ubicados en la ciudad de Durango, Dgo., nuestra meta es impulsar el turismo a través de lugares agradables y tranquilos que podrás visitar solo o en compañía.</p>
 		</div>
-	</section>
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xs-2">
+			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Ver ubicaciones</button></a>
+		</div>
+	</div>
 </div>
+
+<div class="container-fluid padding"></div>
+    <table class="table table-dark">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 <!--- Pie de página -->
 <footer>
 	<div class="container-fluid padding">
