--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
 					<a href="productos.html" class="nav-link">Productos</a>
 				</li>
 				<li class="nav-item ">
-					<a href="#" class="nav-link">Servicios para negocios</a>
+					<a href="negocios.html" class="nav-link">Servicios para negocios</a>
 				</li>
 				<li class="nav-item ">
 					<a href="contacto.html" class="nav-link">Contacto</a>
