--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="productos.html" class="nav-link">Productos</a>
 				</li>
 				<li class="nav-item ">
-					<a href="#" class="nav-link">Servicios para negocios</a>
+					<a href="negocios.html" class="nav-link">Servicios para negocios</a>
 				</li>
 				<li class="nav-item ">
 					<a href="contacto.html" class="nav-link">Contacto</a>
@@ -55,7 +55,7 @@
 			<div class="carousel-caption">
 				<h1 class="display-2">Más que un simple café</h1>
 				<h3>Calidad Veracruzana</h3>
-				<button type="button" class="btn btn btn-success btn-lg">Ver ubicaciones</button>
+				<button type="button" class="btn btn-dark btn-lg">Ver ubicaciones</button>
 				<button type="button" class="btn btn-primary btn-lg">Conócenos</button>
 			</div>
 		</div>
@@ -92,7 +92,7 @@
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<h1 class="display-4">Elaborado con calidad</h1>
+			<h1 class="display-4">Café Elaborado con calidad</h1>
 		</div>
 		<hr>
 		<div class="col-12">
