--- a/productos.html
+++ b/productos.html
@@ -32,7 +32,7 @@
 					<a href="productos.html" class="nav-link">Productos</a>
 				</li>
 				<li class="nav-item ">
-					<a href="#" class="nav-link">Servicios para negocios</a>
+					<a href="negocios.html" class="nav-link">Servicios para negocios</a>
 				</li>
 				<li class="nav-item ">
 					<a href="contacto.html" class="nav-link">Contacto</a>
@@ -48,15 +48,16 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Blended to Perfection</span>
-              <span class="section-heading-lower">Coffees &amp; Teas</span>
+              <span class="section-heading-upper">Preparado para la perfección</span>
+              <br>
+              <span class="section-heading-lower">Cafés &amp; Té</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+            <p class="mb-0">Nos tomamos enserio nuestro trabajo, y lo demostramos, cada vez que ordenas una bebida de nosotros, farantizamos que será una experiencia que te va a gustar. Ya sea nuestro localmente famoso Cappuccino Veracruzano, un té refrescante de hierba, o algo tan simple como una taza de nuestro café negro, que querrás volver a probar.</p>
           </div>
         </div>
       </div>
@@ -69,15 +70,16 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex mr-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-              <span class="section-heading-lower">Bakery &amp; Kitchen</span>
+              <span class="section-heading-upper">Aperitivos deliciosos, buenos antojos</span>
+              <br>
+              <span class="section-heading-lower">Emparedados &amp; Cocina</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
+            <p class="mb-0">Para aquellos que tengan antojo, también ofrecemos emparedados de distintos tipos, de jamón, de pierna, veganos, jamón de cerdo, carne de res y barbacoa. Te aseguramos que nuestro sabor te gustará, además ofrecemos irresistibles descuentos a nuestros clientes en la compra de cualquier bebida, café o té.</p>
           </div>
         </div>
       </div>
@@ -90,15 +92,16 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">From Around the World</span>
-              <span class="section-heading-lower">Bulk Speciality Blends</span>
+              <span class="section-heading-upper">Desde Veracruz</span>
+              <br>
+              <span class="section-heading-lower">Por que respetamos nuestros orígenes</span>
             </h2>
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+            <p class="mb-0">Viajando alrededor del país y probando distintos tipos de café nos dimos cuenta del sabor del café veracruzano, uno de los más sabrosos del mundo, y también para este año queremos tener en nuestro menú café de Oaxaca y Chiapas, nuestra propuesta de valor además de vender café es emplear a productores Mexicanos de Café, con el fin de ayudar a sus familias a salir adelante. Por cada compra que realices un productor de Café Mexicano te lo agradecerá.</p>
           </div>
         </div>
       </div>
