--- a/negocios.html
+++ b/negocios.html
@@ -9,6 +9,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<script src="javascriptpagina.js"></script>
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -54,8 +55,9 @@
 	</div>
 </div>
 
+<button type="button" class="btn btn-primary botonNegocios">Primary</button>
 <div class="container-fluid padding"></div>
-    <table class="table table-dark">
+    <table class="table table-dark tabla1">
         <thead>
         <tr>
             <th scope="col">#</th>
