--- a/negocios.html
+++ b/negocios.html
@@ -47,47 +47,438 @@
 <div class="container-fluid">
 	<div class="row jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">Somos más que un simple café, te ofrecemos un lugar tranquilo para trabajar, platicar, o simplemente descanzar. Ubicados en la ciudad de Durango, Dgo., nuestra meta es impulsar el turismo a través de lugares agradables y tranquilos que podrás visitar solo o en compañía.</p>
+			<p class="lead">En 8 Bit Coffee estamos interesados en hacer negocios con personas interesadas en iniciar y administrar una franquicia, otorgamos las facilidades que se muestran a continuación, plan de negocio, plan operativo, plan de capacitación, una fuente de ingresos confiable, un estudio de mercado y de la zona, campañas de marketing, uso de la marca registrada y de los logotipos, etc.</p>
+			<p class="lead">A continuación se muestran los detalles de inversión que necesitas mes por mes para completar su liquidación en 3 años:</p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xs-2">
-			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Ver ubicaciones</button></a>
+			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg botonNegocios">Ocultar / mostrar tabla</button></a>
 		</div>
+		<br>
+		<table border="0" cellpadding="0" cellspacing="0" id="sheet0" class="sheet0 gridlines table table-dark tabla1">
+			<col class="col0">
+			<col class="col1">
+			<col class="col2">
+			<col class="col3">
+			<col class="col4">
+			<col class="col5">
+			<col class="col6">
+			<col class="col7">
+			<col class="col8">
+			<tbody>
+			  <tr class="row0">
+				<td class="column0 style10 s">Año</td>
+				<td class="column1 style10 s">Sdo. Capital</td>
+				<td class="column2 style10 s">Pago Capital</td>
+				<td class="column3 style10 s">P. Int.</td>
+				<td class="column4 style10 s">Monto de Pago</td>
+				<td class="column5 style10 s">Plazo.</td>
+				<td class="column6 style10 s">Sdo. Capital</td>
+				<td class="column7 style10 s">Pago No</td>
+				<td class="column8 style10 s">Fecha</td>
+			  </tr>
+			  <tr class="row1">
+				<td class="column0 style1 n">1</td>
+				<td class="column1 style2 n">$150,000.00</td>
+				<td class="column2 style2 n">$3,590.08</td>
+				<td class="column3 style2 n">$1,250.00</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$146,409.92</td>
+				<td class="column7 style1 n">1</td>
+				<td class="column8 style3 n">3/5/2021</td>
+			  </tr>
+			  <tr class="row2">
+				<td class="column0 style4 n">1</td>
+				<td class="column1 style5 n">$146,409.92</td>
+				<td class="column2 style5 n">$3,620.00</td>
+				<td class="column3 style5 n">$1,220.08</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$142,789.93</td>
+				<td class="column7 style4 n">2</td>
+				<td class="column8 style6 n">4/4/2021</td>
+			  </tr>
+			  <tr class="row3">
+				<td class="column0 style1 n">1</td>
+				<td class="column1 style2 n">$142,789.93</td>
+				<td class="column2 style2 n">$3,650.16</td>
+				<td class="column3 style2 n">$1,189.92</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$139,139.76</td>
+				<td class="column7 style1 n">3</td>
+				<td class="column8 style3 n">5/4/2021</td>
+			  </tr>
+			  <tr class="row4">
+				<td class="column0 style4 n">1</td>
+				<td class="column1 style5 n">$139,139.76</td>
+				<td class="column2 style5 n">$3,680.58</td>
+				<td class="column3 style5 n">$1,159.50</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$135,459.18</td>
+				<td class="column7 style4 n">4</td>
+				<td class="column8 style6 n">6/3/2021</td>
+			  </tr>
+			  <tr class="row5">
+				<td class="column0 style1 n">1</td>
+				<td class="column1 style2 n">$135,459.18</td>
+				<td class="column2 style2 n">$3,711.25</td>
+				<td class="column3 style2 n">$1,128.83</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$131,747.93</td>
+				<td class="column7 style1 n">5</td>
+				<td class="column8 style3 n">7/3/2021</td>
+			  </tr>
+			  <tr class="row6">
+				<td class="column0 style4 n">1</td>
+				<td class="column1 style5 n">$131,747.93</td>
+				<td class="column2 style5 n">$3,742.18</td>
+				<td class="column3 style5 n">$1,097.90</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$128,005.75</td>
+				<td class="column7 style4 n">6</td>
+				<td class="column8 style6 n">8/2/2021</td>
+			  </tr>
+			  <tr class="row7">
+				<td class="column0 style1 n">1</td>
+				<td class="column1 style2 n">$128,005.75</td>
+				<td class="column2 style2 n">$3,773.36</td>
+				<td class="column3 style2 n">$1,066.71</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$124,232.39</td>
+				<td class="column7 style1 n">7</td>
+				<td class="column8 style3 n">9/1/2021</td>
+			  </tr>
+			  <tr class="row8">
+				<td class="column0 style4 n">1</td>
+				<td class="column1 style5 n">$124,232.39</td>
+				<td class="column2 style5 n">$3,804.81</td>
+				<td class="column3 style5 n">$1,035.27</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$120,427.58</td>
+				<td class="column7 style4 n">8</td>
+				<td class="column8 style6 n">10/1/2021</td>
+			  </tr>
+			  <tr class="row9">
+				<td class="column0 style1 n">1</td>
+				<td class="column1 style2 n">$120,427.58</td>
+				<td class="column2 style2 n">$3,836.51</td>
+				<td class="column3 style2 n">$1,003.56</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$116,591.07</td>
+				<td class="column7 style1 n">9</td>
+				<td class="column8 style3 n">10/31/2021</td>
+			  </tr>
+			  <tr class="row10">
+				<td class="column0 style4 n">1</td>
+				<td class="column1 style5 n">$116,591.07</td>
+				<td class="column2 style5 n">$3,868.49</td>
+				<td class="column3 style5 n">$971.59</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$112,722.58</td>
+				<td class="column7 style4 n">10</td>
+				<td class="column8 style6 n">11/30/2021</td>
+			  </tr>
+			  <tr class="row11">
+				<td class="column0 style1 n">1</td>
+				<td class="column1 style2 n">$112,722.58</td>
+				<td class="column2 style2 n">$3,900.72</td>
+				<td class="column3 style2 n">$939.35</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$108,821.86</td>
+				<td class="column7 style1 n">11</td>
+				<td class="column8 style3 n">12/30/2021</td>
+			  </tr>
+			  <tr class="row12">
+				<td class="column0 style4 n">1</td>
+				<td class="column1 style5 n">$108,821.86</td>
+				<td class="column2 style5 n">$3,933.23</td>
+				<td class="column3 style5 n">$906.85</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$104,888.63</td>
+				<td class="column7 style4 n">12</td>
+				<td class="column8 style6 n">1/29/2022</td>
+			  </tr>
+			  <tr class="row13">
+				<td class="column0 style1 n">2</td>
+				<td class="column1 style2 n">$104,888.63</td>
+				<td class="column2 style2 n">$3,966.01</td>
+				<td class="column3 style2 n">$874.07</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$100,922.62</td>
+				<td class="column7 style1 n">13</td>
+				<td class="column8 style3 n">2/28/2022</td>
+			  </tr>
+			  <tr class="row14">
+				<td class="column0 style4 n">2</td>
+				<td class="column1 style5 n">$100,922.62</td>
+				<td class="column2 style5 n">$3,999.06</td>
+				<td class="column3 style5 n">$841.02</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$96,923.57</td>
+				<td class="column7 style4 n">14</td>
+				<td class="column8 style6 n">3/30/2022</td>
+			  </tr>
+			  <tr class="row15">
+				<td class="column0 style1 n">2</td>
+				<td class="column1 style2 n">$96,923.57</td>
+				<td class="column2 style2 n">$4,032.38</td>
+				<td class="column3 style2 n">$807.70</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$92,891.19</td>
+				<td class="column7 style1 n">15</td>
+				<td class="column8 style3 n">4/29/2022</td>
+			  </tr>
+			  <tr class="row16">
+				<td class="column0 style4 n">2</td>
+				<td class="column1 style5 n">$92,891.19</td>
+				<td class="column2 style5 n">$4,065.98</td>
+				<td class="column3 style5 n">$774.09</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$88,825.20</td>
+				<td class="column7 style4 n">16</td>
+				<td class="column8 style6 n">5/29/2022</td>
+			  </tr>
+			  <tr class="row17">
+				<td class="column0 style1 n">2</td>
+				<td class="column1 style2 n">$88,825.20</td>
+				<td class="column2 style2 n">$4,099.87</td>
+				<td class="column3 style2 n">$740.21</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$84,725.33</td>
+				<td class="column7 style1 n">17</td>
+				<td class="column8 style3 n">6/28/2022</td>
+			  </tr>
+			  <tr class="row18">
+				<td class="column0 style4 n">2</td>
+				<td class="column1 style5 n">$84,725.33</td>
+				<td class="column2 style5 n">$4,134.03</td>
+				<td class="column3 style5 n">$706.04</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$80,591.30</td>
+				<td class="column7 style4 n">18</td>
+				<td class="column8 style6 n">7/28/2022</td>
+			  </tr>
+			  <tr class="row19">
+				<td class="column0 style1 n">2</td>
+				<td class="column1 style2 n">$80,591.30</td>
+				<td class="column2 style2 n">$4,168.48</td>
+				<td class="column3 style2 n">$671.59</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$76,422.81</td>
+				<td class="column7 style1 n">19</td>
+				<td class="column8 style3 n">8/27/2022</td>
+			  </tr>
+			  <tr class="row20">
+				<td class="column0 style4 n">2</td>
+				<td class="column1 style5 n">$76,422.81</td>
+				<td class="column2 style5 n">$4,203.22</td>
+				<td class="column3 style5 n">$636.86</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$72,219.59</td>
+				<td class="column7 style4 n">20</td>
+				<td class="column8 style6 n">9/26/2022</td>
+			  </tr>
+			  <tr class="row21">
+				<td class="column0 style1 n">2</td>
+				<td class="column1 style2 n">$72,219.59</td>
+				<td class="column2 style2 n">$4,238.25</td>
+				<td class="column3 style2 n">$601.83</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$67,981.35</td>
+				<td class="column7 style1 n">21</td>
+				<td class="column8 style3 n">10/26/2022</td>
+			  </tr>
+			  <tr class="row22">
+				<td class="column0 style4 n">2</td>
+				<td class="column1 style5 n">$67,981.35</td>
+				<td class="column2 style5 n">$4,273.57</td>
+				<td class="column3 style5 n">$566.51</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$63,707.78</td>
+				<td class="column7 style4 n">22</td>
+				<td class="column8 style6 n">11/25/2022</td>
+			  </tr>
+			  <tr class="row23">
+				<td class="column0 style1 n">2</td>
+				<td class="column1 style2 n">$63,707.78</td>
+				<td class="column2 style2 n">$4,309.18</td>
+				<td class="column3 style2 n">$530.90</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$59,398.60</td>
+				<td class="column7 style1 n">23</td>
+				<td class="column8 style3 n">12/25/2022</td>
+			  </tr>
+			  <tr class="row24">
+				<td class="column0 style4 n">2</td>
+				<td class="column1 style5 n">$59,398.60</td>
+				<td class="column2 style5 n">$4,345.09</td>
+				<td class="column3 style5 n">$494.99</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$55,053.51</td>
+				<td class="column7 style4 n">24</td>
+				<td class="column8 style6 n">1/24/2023</td>
+			  </tr>
+			  <tr class="row25">
+				<td class="column0 style1 n">3</td>
+				<td class="column1 style2 n">$55,053.51</td>
+				<td class="column2 style2 n">$4,381.30</td>
+				<td class="column3 style2 n">$458.78</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$50,672.21</td>
+				<td class="column7 style1 n">25</td>
+				<td class="column8 style3 n">2/23/2023</td>
+			  </tr>
+			  <tr class="row26">
+				<td class="column0 style4 n">3</td>
+				<td class="column1 style5 n">$50,672.21</td>
+				<td class="column2 style5 n">$4,417.81</td>
+				<td class="column3 style5 n">$422.27</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$46,254.40</td>
+				<td class="column7 style4 n">26</td>
+				<td class="column8 style6 n">3/25/2023</td>
+			  </tr>
+			  <tr class="row27">
+				<td class="column0 style1 n">3</td>
+				<td class="column1 style2 n">$46,254.40</td>
+				<td class="column2 style2 n">$4,454.62</td>
+				<td class="column3 style2 n">$385.45</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$41,799.78</td>
+				<td class="column7 style1 n">27</td>
+				<td class="column8 style3 n">4/24/2023</td>
+			  </tr>
+			  <tr class="row28">
+				<td class="column0 style4 n">3</td>
+				<td class="column1 style5 n">$41,799.78</td>
+				<td class="column2 style5 n">$4,491.75</td>
+				<td class="column3 style5 n">$348.33</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$37,308.03</td>
+				<td class="column7 style4 n">28</td>
+				<td class="column8 style6 n">5/24/2023</td>
+			  </tr>
+			  <tr class="row29">
+				<td class="column0 style1 n">3</td>
+				<td class="column1 style2 n">$37,308.03</td>
+				<td class="column2 style2 n">$4,529.18</td>
+				<td class="column3 style2 n">$310.90</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$32,778.85</td>
+				<td class="column7 style1 n">29</td>
+				<td class="column8 style3 n">6/23/2023</td>
+			  </tr>
+			  <tr class="row30">
+				<td class="column0 style4 n">3</td>
+				<td class="column1 style5 n">$32,778.85</td>
+				<td class="column2 style5 n">$4,566.92</td>
+				<td class="column3 style5 n">$273.16</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$28,211.93</td>
+				<td class="column7 style4 n">30</td>
+				<td class="column8 style6 n">7/23/2023</td>
+			  </tr>
+			  <tr class="row31">
+				<td class="column0 style1 n">3</td>
+				<td class="column1 style2 n">$28,211.93</td>
+				<td class="column2 style2 n">$4,604.98</td>
+				<td class="column3 style2 n">$235.10</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$23,606.95</td>
+				<td class="column7 style1 n">31</td>
+				<td class="column8 style3 n">8/22/2023</td>
+			  </tr>
+			  <tr class="row32">
+				<td class="column0 style4 n">3</td>
+				<td class="column1 style5 n">$23,606.95</td>
+				<td class="column2 style5 n">$4,643.35</td>
+				<td class="column3 style5 n">$196.72</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$18,963.60</td>
+				<td class="column7 style4 n">32</td>
+				<td class="column8 style6 n">9/21/2023</td>
+			  </tr>
+			  <tr class="row33">
+				<td class="column0 style1 n">3</td>
+				<td class="column1 style2 n">$18,963.60</td>
+				<td class="column2 style2 n">$4,682.05</td>
+				<td class="column3 style2 n">$158.03</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$14,281.55</td>
+				<td class="column7 style1 n">33</td>
+				<td class="column8 style3 n">10/21/2023</td>
+			  </tr>
+			  <tr class="row34">
+				<td class="column0 style4 n">3</td>
+				<td class="column1 style5 n">$14,281.55</td>
+				<td class="column2 style5 n">$4,721.07</td>
+				<td class="column3 style5 n">$119.01</td>
+				<td class="column4 style5 n">$4,840.08</td>
+				<td class="column5 style4 n">30</td>
+				<td class="column6 style5 n">$9,560.48</td>
+				<td class="column7 style4 n">34</td>
+				<td class="column8 style6 n">11/20/2023</td>
+			  </tr>
+			  <tr class="row35">
+				<td class="column0 style1 n">3</td>
+				<td class="column1 style2 n">$9,560.48</td>
+				<td class="column2 style2 n">$4,760.41</td>
+				<td class="column3 style2 n">$79.67</td>
+				<td class="column4 style2 n">$4,840.08</td>
+				<td class="column5 style1 n">30</td>
+				<td class="column6 style2 n">$4,800.08</td>
+				<td class="column7 style1 n">35</td>
+				<td class="column8 style3 n">12/20/2023</td>
+			  </tr>
+			  <tr class="row36">
+				<td class="column0 style7 n">3</td>
+				<td class="column1 style8 n">$4,800.08</td>
+				<td class="column2 style8 n">$4,800.08</td>
+				<td class="column3 style8 n">$40.00</td>
+				<td class="column4 style8 n">$4,840.08</td>
+				<td class="column5 style7 n">30</td>
+				<td class="column6 style8 n">$0.00</td>
+				<td class="column7 style7 n">36</td>
+				<td class="column8 style9 n">1/19/2024</td>
+			  </tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 
-<button type="button" class="btn btn-primary botonNegocios">Primary</button>
-<div class="container-fluid padding"></div>
-    <table class="table table-dark tabla1">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+
+    
 
 <!--- Pie de página -->
 <footer>
