Agregado elemento oculto por id con Javascript
Agregado elemento oculto por id con Javascript

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </figure>
 
 <!--- Sección de emojis -->
-<button class="fun" data-toggle="collapse" data-target="#emoji">A la gente le gusta:</button>
+<button class="fun btn btn-primary btn-block" data-toggle="collapse" data-target="#emoji">Principales sabores:</button>
 <div id="emoji" class="collapse">
 	<div class="container-fluid padding">
 		<div class="row text-center">
