--- a/negocios.html
+++ b/negocios.html
@@ -54,6 +54,10 @@
 			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg botonNegocios">Ocultar / mostrar tabla</button></a>
 		</div>
 		<br>
+
+<h2 id="id02">No hay devoluciones jeje</h2>
+
+<!--Tabla-->
 		<table border="0" cellpadding="0" cellspacing="0" id="sheet0" class="sheet0 gridlines table table-dark tabla1">
 			<col class="col0">
 			<col class="col1">
@@ -476,9 +480,6 @@
 		</table>
 	</div>
 </div>
-
-
-    
 
 <!--- Pie de página -->
 <footer>
