--- a/productos.html
+++ b/productos.html
@@ -11,6 +11,13 @@
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<script src="javascriptpagina.js"></script>
 	<link href="style.css" rel="stylesheet">
+	<script> 
+		$(document).ready(function(){
+		  $("button.mueveCafe").click(function(){
+			$("div.imagenCafe").animate({left: '250px'});
+		  });
+		});
+		</script> 
 </head>
 <body>
 
@@ -108,7 +115,7 @@
       </div>
     </div>
   </section>
-
+  
 <!--- Pie de página -->
 <footer>
 	<div class="container-fluid padding">
