--- a/contacto.html
+++ b/contacto.html
@@ -49,8 +49,34 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d541.6967388971926!2d-104.67066362756074!3d24.028005245642262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x869bc83cc9e78fff%3A0xbb581f20c8091b12!2sCoelum%20Caff%C3%A9!5e0!3m2!1ses-419!2smx!4v1584047139532!5m2!1ses-419!2smx" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
 </div>
-  
-<!--Google Maps-->
+
+
+<!--- Sección de dos columnas -->
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-md-12 col-lg-6">
+			<h2>Encuéntranos</h2>
+			<br>
+			<p id="direccion1">Presiona el botón para ver la dirección</p>
+			<button class="btn btn-primary" type="button" onclick='document.getElementById("direccion1").innerHTML = "20 Noviembre #1000, Zona Centro, Durango, DGO., 34000."'>Ver dirección</button>
+			<br>
+			<br>
+			<p>¡Sirve el café!</p>
+			<div>
+				<button class="btn btn-primary" onclick="document.getElementById('myImage').src='img/coffee1.gif'">Sírve</button>
+				<button class="btn btn-primary" onclick="document.getElementById('myImage').src='img/coffee2.gif'">Prueba</button>
+			</div>
+			<br>
+			<div class="text-center">
+				<img id="myImage" src="img/coffee1.gif" style="width:200px">
+			</div>
+		</div>
+		<div class="col-lg-6">
+			<img src="img/plan-de-negocio-panaderia-3.jpg" class="img-fluid">
+		</div>
+	</div>
+	<hr class="my-4">
+</div>
 
 <!--- Pie de página -->
 <footer>
