--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
 <!-- Navegación -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a href="#" class="navbar-brand"><img src="img/logo.png"></a>
+		<a href="index.html" class="navbar-brand"><img src="img/logo.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -37,6 +37,9 @@
 				</li>
 				<li class="nav-item ">
 					<a href="contacto.html" class="nav-link">Contacto</a>
+				</li>
+				<li class="nav-item ">
+					<a href="patio.html" class="nav-link">Patio de juegos</a>
 				</li>
 			</ul>
 		</div>
