--- a/productos.html
+++ b/productos.html
@@ -24,7 +24,7 @@
 <!-- Navegación -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a href="#" class="navbar-brand"><img src="img/logo.png"></a>
+		<a href="index.html" class="navbar-brand"><img src="img/logo.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -44,6 +44,9 @@
 				</li>
 				<li class="nav-item ">
 					<a href="contacto.html" class="nav-link">Contacto</a>
+				</li>
+				<li class="nav-item ">
+					<a href="patio.html" class="nav-link">Patio de juegos</a>
 				</li>
 			</ul>
 		</div>
